<resources>
    <string name="app_name">Diabytes</string>
    <string name="tipo_porcao">Tipo de porção</string>
    <string name="carb">Carboidratos (g)</string>
    <string name="porcao">Porção</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tbTitle">Diabytes</string>
    <string name="menu_1">Configurações</string>
    <string name="menu_2">Sobre nós</string>
    <string name="searchable">searchable</string>
    <string name="menu_search">Search</string>
    <string name="continuar">Continuar</string>
    <string name="txtfatorsensiManha">Insira seu fator de sensibilidade(Manhã)</string>
    <string name="txtfatorsensiTarde">Insira seu fator de sensibilidade(Tarde)</string>
    <string name="txtfatorsensiNoite">Insira seu fator de sensibilidade(Noite)</string>
    <string name="txt_UIporCHO_M">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Manhã)</string>
    <string name="txt_UIporCHO_T">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Tarde)</string>
    <string name="txt_UIporCHO_N">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Noite)</string>
    <string name="ci_txtMsg">Olá caro amigo, ficamos muito felizes que tenha optado por utilizar nosso app mas antes de tudo precisamos de algumas informações que seu médico lhe passou para que possamos te ajudar, por favor preencha os campos abaixo de acordo com o que se pede c:</string>
    <string name="periodo">Período não definido</string>
    <string name="txttipoRefeic">Selecione o tipo de Refeição</string>
    <string name="textDetalhes">Detalhes</string>
    <string name="refeicaoperiodo">Não selecionado</string>
    <string name="gPorcao">Porção (g)</string>
    <string name="metaGlicemica">Qual é a meta glicêmica indicada pelo seu médico?</string>
    <string name="novoFator">Novo Fator de Sensibilidade:</string>
    <string name="novoCHO">Nova relação Carboidrato/Insulina</string>
    <string name="novaMeta">Nova Meta Glicêmica</string>
    <string name="selecionarAli">Escolha o Tipo de Alimento</string>
    <string name="AlimentosBD">TABELA TACO</string>
    <string name="meusAlimentos">Meus Alimentos</string>
    <string name="voltar">Voltar</string>
    <string name="excluir">EXCLUIR</string>
>>>>>>> upstream/master
</resources>
