<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/selecionarAli"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/AlimentosBD"
        android:id="@+id/slc_btnTACO"
        android:textSize="20dp"
        android:layout_weight="0.5"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/meusAlimentos"
        android:id="@+id/slc_btnMeus"
        android:textSize="20dp"
        android:layout_weight="0.5"
        android:background="@color/colorPrimaryDark"/>
</LinearLayout>