<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_configinicial"
    tools:context="com.example.nerds.tcctest.FirstAccess"
    android:weightSum="1">

    <include layout="@layout/toolbar"
        android:id="@+id/my_toolbar"/>

    <TextView
        android:text="@string/txtfatorsensiManha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ci_textViewM"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="10sp"/>

    <EditText
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtBox_fatorsensiM" />

    <TextView
        android:text="@string/txtfatorsensiTarde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ci_textViewT"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="20sp"/>

    <EditText
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtBox_fatorsensiT" />

    <TextView
        android:text="@string/txtfatorsensiNoite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ci_textViewN"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="20sp"/>

    <EditText
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtBox_fatorsensiN" />

    <Button
        android:text="@string/continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cfg"
        android:onClick="gotoMain"
        android:layout_gravity="bottom"/>
</LinearLayout>