<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_alimento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nerds.tcctest.NewAlimentoActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Nome"
        android:inputType="textPersonName" />

    <TextView
        android:text="@string/tipo_porcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/textViewPorcao"
        android:layout_alignRight="@+id/textViewCarboidratos"
        android:layout_alignEnd="@+id/textViewCarboidratos"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editPorcao"
        android:textSize="12sp"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp"
        android:layout_alignBaseline="@+id/textViewPorcao"
        android:layout_alignBottom="@+id/textViewPorcao"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Ex.: Colher de Sopa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gPorcao"
        android:textSize="14sp"
        android:id="@+id/textViewgPorcao"
        android:layout_alignLeft="@+id/textViewPorcao"
        android:textColor="@android:color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewPorcao"
        android:layout_marginTop="32dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/editgPorcao"
        android:textSize="12sp"
        android:hint="Ex.: 10,5"
        android:layout_below="@+id/editPorcao"
        android:layout_alignLeft="@+id/editPorcao"
        android:layout_alignStart="@+id/editPorcao"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/editCarb"
        android:textSize="12sp"
        android:hint="Ex.: 10,5"
        android:layout_below="@+id/editgPorcao"
        android:layout_alignLeft="@+id/editgPorcao"
        android:layout_alignStart="@+id/editgPorcao" />

    <TextView
        android:text="@string/carb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCarboidratos"
        android:layout_below="@id/textViewgPorcao"
        android:layout_alignBaseline="@+id/editCarb"
        android:layout_alignBottom="@+id/editCarb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSalvar"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary" />
</RelativeLayout>
